Fix build configuration: move native libs packaging to gradle

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,7 +6,8 @@ pluginManagement {
     }
 }
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    // Меняем FAIL_ON_PROJECT_REPOS на PREFER_SETTINGS, чтобы избежать ошибки "Cannot mutate"
+    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
     repositories {
         google()
         mavenCentral()
