--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,29 @@
 plugins {
-    id 'com.android.application' version '8.2.0'
+    id 'com.android.application' version '8.1.1' // Чуть более стабильная версия для нашего случая
 }
+
 android {
     namespace 'com.local.phpserver'
     compileSdk 34
+
     defaultConfig {
         applicationId "com.local.phpserver"
         minSdk 24
         targetSdk 34
         versionCode 1
         versionName "1.0"
-        ndk { abiFilters 'arm64-v8a' }
+        ndk {
+            abiFilters 'arm64-v8a'
+        }
     }
+    
+    // ВМЕСТО манифеста, настраиваем распаковку библиотек здесь
+    packagingOptions {
+        jniLibs {
+            useLegacyPackaging = true
+        }
+    }
+
     sourceSets {
         main {
             manifest.srcFile 'src/AndroidManifest.xml'
@@ -20,11 +32,13 @@ android {
             jniLibs.srcDirs = ['src/jniLibs']
         }
     }
+    
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
+
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.webkit:webkit:1.9.0'
