--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,9 @@
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
 buildscript {
     repositories {
         google()
