--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,10 @@
+def gitVersionCode = { ->
+    def p = "git rev-list --count HEAD".execute()
+    p.text.trim().toInteger()
+}
+
+
+
 plugins {
     id 'com.android.application' version '8.4.0'
 }
@@ -15,8 +22,8 @@ android {
         applicationId "com.local.phpserver"
         minSdk = 24
         targetSdk = 34
-        versionCode 1
-        versionName "1.0"
+        versionCode gitVersionCode()
+        versionName "1.0.${versionCode}"
         
         ndk {
             abiFilters 'arm64-v8a'
