--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
       run: chmod +x gradlew
 
     - name: Build with Gradle
-      run: ./gradlew assembleDebug --console=plain --no-stacktrace
+      run: ./gradlew assembleDebug --console=plain
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
